e2e/testdata/invalid/clusterpolicy-missing-kind.yaml
apiVersion: nomos.dev/v1
kind: ClusterPolicy
metadata:
  name: invalid
spec:
  resources:
  - group: rbac.authorization.k8s.io
    kind: ClusterRole
    versions:
    - objects:
      - apiVersion: rbac.authorization.k8s.io/v1
        kind: ClusterRole
        metadata:
          annotations:
            configmanagement.gke.io/cluster-name: e2e-test-cluster
            configmanagement.gke.io/source-path: cluster/admin-clusterrole.yaml
          creationTimestamp: null
          name: acme-admin
        rules:
        - apiGroups:
          - ""
          resources:
          - pods
          verbs:
          - '*'
        - apiGroups:
          - ""
          resources:
          - namespaces
          verbs:
          - get
        - apiGroups:
          - rbac.authorization.k8s.io
          resources:
          - roles
          - rolebindings
          verbs:
          - get
          - list
    version: v1
