e2e/testdata/invalid/clusterpolicy-missing-version.yaml
apiVersion: nomos.dev/v1
kind: ClusterPolicy
metadata:
  name: invalid
spec:
  resources:
  - group: rbac.authorization.k8s.io
    kind: ClusterRole
    versions:
    - objects:
      - apiVersion: rbac.authorization.k8s.io/v1
        kind: ClusterRole
        metadata:
          annotations:
            config.gke.io/cluster-name: e2e-test-cluster
            config.gke.io/source-path: cluster/admin-clusterrole.yaml
          creationTimestamp: null
          name: acme-admin
        rules:
        - apiGroups:
          - ""
          resources:
          - pods
          verbs:
          - '*'
        - apiGroups:
          - ""
          resources:
          - namespaces
          verbs:
          - get
        - apiGroups:
          - rbac.authorization.k8s.io
          resources:
          - roles
          - rolebindings
          verbs:
          - get
          - list
      - apiVersion: rbac.authorization.k8s.io/v1
        kind: ClusterRole
        metadata:
          annotations:
            config.gke.io/cluster-name: e2e-test-cluster
            config.gke.io/source-path: cluster/namespace-viewer-clusterrole.yaml
          creationTimestamp: null
          name: namespace-viewer
        rules:
        - apiGroups:
          - ""
          resources:
          - namespaces
          verbs:
          - get
          - list
      - apiVersion: rbac.authorization.k8s.io/v1
        kind: ClusterRole
        metadata:
          annotations:
            config.gke.io/cluster-name: e2e-test-cluster
            config.gke.io/source-path: cluster/rbac-viewer-clusterrole.yaml
          creationTimestamp: null
          name: rbac-viewer
        rules:
        - apiGroups:
          - rbac.authorization.k8s.io
          resources:
          - roles
          - rolebindings
          - clusterroles
          - clusterrolebindings
          verbs:
          - get
          - list
