e2e/testdata/invalid/policynode-invalid-type.yaml
apiVersion: nomos.dev/v1
kind: PolicyNode
metadata:
  name: invalid
spec:
  type: invalid
