e2e/testdata/invalid/policynode-missing-kind.yaml
apiVersion: configmanagement.gke.io/v1
kind: PolicyNode
metadata:
  name: invalid
spec:
  resources:
  - {}
