e2e/testdata/invalid/policynode-missing-version.yaml
apiVersion: nomos.dev/v1
kind: PolicyNode
metadata:
  name: invalid
spec:
  resources:
  - kind: ResourceQuota
    versions:
    - objects:
      - apiVersion: v1
        kind: ResourceQuota
        metadata:
          annotations:
            configmanagement.gke.io/cluster-name: e2e-test-cluster
            configmanagement.gke.io/source-path: namespaces/rnd/quota.yaml
          creationTimestamp: null
          name: nomos-resource-quota
        spec:
          hard:
            configmaps: "2"
        status: {}
  type: namespace
