e2e/testdata/invalid/policynode-missing-versions.yaml
apiVersion: nomos.dev/v1
kind: PolicyNode
metadata:
  name: invalid
spec:
  resources:
  - kind: ResourceQuota
    versions:
    - {}
