e2e/testdata/invalid/service-invalid-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: a.b.c
  namespace: dir
spec:
  sessionAffinity: ClientIP
  selector:
    app: some-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9376
